# cameraadaptor

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FORMATS.md  NOTICE  PLATFORMS.md  README.md  SECURITY.md  pyproject.toml
.github/workflows/: pypi.yml  test.yml
src/edgefirst/: __init__.py
src/edgefirst/cameraadaptor/: __init__.py  _compat.py  _version.py  color_spaces.py  config.py  hal_utils.py  transform.py
src/edgefirst/cameraadaptor/pytorch/: __init__.py  adaptor.py  lightning.py
src/edgefirst/cameraadaptor/tensorflow/: __init__.py  adaptor.py
tests/: conftest.py  test_color_spaces.py  test_compat.py  test_config.py  test_hal_utils.py  test_lightning.py  test_pytorch.py  test_tensorflow.py  test_transform.py
